--- a/docs/styles.css
+++ b/docs/styles.css
@@ -80,6 +80,14 @@ body {
     );
 }
 
+.USA-flag.half-staff {
+    transform: translateY(50%);
+}
+
+.USA-flag.full-staff {
+    transform: translateY(0);
+}
+
 /* Union (blue field) with stars */
 .USA-stars {
     position: absolute;
